go to trash keymap

--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -19,6 +19,11 @@ run  = "cd /Applications"
 desc = "Cd to /Applications"
 
 [[manager.prepend_keymap]]
+on   = [ "g", "T" ]
+run  = "cd ~/.Trash/"
+desc = "Cd to Trash"
+
+[[manager.prepend_keymap]]
 on   = [ "g", "d" ]
 run  = "cd ~/.config/dotfiles"
 desc = "Cd to ~/.config/dotfiles"
