better close window mapping

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -57,7 +57,7 @@ enabled_layouts Splits, Stack, Fat, Grid, Horizontal, Tall, Vertical
 map super+backslash launch --location=vsplit --cwd=current
 map super+enter launch --location=hsplit --cwd=current
 map super+t new_tab_with_cwd
-map super+w close_window
+map super+i close_window
 
 map super+u scroll_page_up
 map super+d scroll_page_down
@@ -70,7 +70,6 @@ map super+j combine : nth_window -1 : send_text all r\x0d : nth_window -1
 map super+shift+, load_config_file
 map super+, move_tab_backward
 map super+shift+l goto_layout stack
-# map super+o goto_layout stack
 map super+o close_other_tabs_in_os_window
 map super+shift+o close_other_tabs_in_os_window
 map super+shift+enter goto_layout stack
