more yazi icons

--- a/yazi/theme.toml
+++ b/yazi/theme.toml
@@ -21,9 +21,13 @@ prepend_dirs  = [
 	{ name = "nvim2", text = " ", fg_dark = "#eca517", fg_light = "#76520c"  },
 	{ name = ".nvim", text = " ", fg_dark = "#eca517", fg_light = "#76520c"  },
 	{ name = "vim", text = " ", fg_dark = "#eca517", fg_light = "#76520c"  },
+	{ name = ".vim", text = " ", fg_dark = "#eca517", fg_light = "#76520c"  },
 	{ name = ".vimrc", text = " ", fg_dark = "#eca517", fg_light = "#76520c"  },
+	{ name = ".emacs.d", text = " ", fg_dark = "#eca517", fg_light = "#76520c"  },
+	{ name = ".emacs.d.backup", text = " ", fg_dark = "#eca517", fg_light = "#76520c"  },
 	{ name = ".viminfo", text = " " },
 	{ name = ".viminfo.old", text = " " },
+	{ name = ".tmux", text = " " },
 	{ name = ".cargo", text = " ", fg_dark = "#eca517", fg_light = "#76520c" },
 	{ name = "gcloud", text = "󱇶 ", fg_dark = "#eca517", fg_light = "#76520c" },
 	{ name = "docker", text = " " },
@@ -37,6 +41,8 @@ prepend_dirs  = [
 	# { name = "schemas", text = "⨠" },
 	# { name = "models", text = "🌏" },
 	{ name = "web", text = "🕸️" },
+	{ name = "docs", text = "📖" },
+	{ name = "doc", text = "📖" },
 	{ name = ".cache", text = "󰃨 ", fg_dark = "#eca517", fg_light = "#76520c" },
 	{ name = "build", text = "🚧", fg_dark = "#eca517", fg_light = "#76520c" },
 	{ name = "yazi", text = "🧰" },
@@ -55,8 +61,7 @@ prepend_dirs  = [
 	{ name = "tmp", text = "⏳" },
 	{ name = "Applications", text = "🚀" },
 	{ name = "Volumes", text = "📀" },
-	{ name = "docs", text = "📖" },
-	{ name = "doc", text = "📖" },
+	{ name = ".Trash", text = "🗑️" },
 ]
 prepend_globs = [
 		{ name = "**/*.app/", text = "󰘳 ", fg_dark = "#eca517", fg_light = "#76520c" },
