--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -1,4 +1,14 @@
 [[manager.prepend_keymap]]
+on   = "|"
+run  = "shell 'kitty @ launch --location=vsplit fish -c \"y $1\"' --confirm"
+desc = "Vertical Split"
+
+[[manager.prepend_keymap]]
+on   = "\\"
+run  = "shell 'kitty @ launch --location=hsplit fish -c \"y $1\"' --confirm"
+desc = "Horizontal Split"
+
+[[manager.prepend_keymap]]
 on   = [ "g", "b" ]
 run  = "cd ~/bar"
 desc = "Cd to ~/bar"
