cursor trail kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,8 @@
 macos_option_as_alt yes
 confirm_os_window_close 0
 shell /opt/homebrew/bin/fish
+cursor_trail 3
+cursor_trail_decay 0.01 0.1
 
 # Font
 font_family Fira Code Medium
