--- a/yazi/theme.toml
+++ b/yazi/theme.toml
@@ -27,7 +27,7 @@ prepend_dirs  = [
 	{ name = ".emacs.d.backup", text = " ", fg_dark = "#eca517", fg_light = "#76520c"  },
 	{ name = ".viminfo", text = " " },
 	{ name = ".viminfo.old", text = " " },
-	{ name = ".terraform", text = "󱁢 " },
+	{ name = ".terraform", text = "󱁢 ", fg_dark = "#eca517", fg_light = "#76520c" },
 	{ name = ".tmux", text = " " },
 	{ name = ".cargo", text = " ", fg_dark = "#eca517", fg_light = "#76520c" },
 	{ name = "gcloud", text = "󱇶 ", fg_dark = "#eca517", fg_light = "#76520c" },
