--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -83,6 +83,14 @@ map super+shift+s detach_window ask
 
 background_opacity 0.8
 
+# Tab style
+# tab_bar_style separator
+# tab_bar_style powerline
+# tab_powerline_style slanted
+# tab_separator "┇"
+# tab_bar_background #eee
+tab_fade 0.01 0.2 0.95 1
+
 # https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
 # The basic colors
 foreground              #CDD6F4
@@ -108,7 +116,8 @@ macos_titlebar_color    #1E1E2E
 
 # Tab bar colors
 active_tab_foreground   #11111B
-active_tab_background   #CBA6F7
+active_tab_background   #ff00cc
+# active_tab_background   #ff0000
 inactive_tab_foreground #CDD6F4
 inactive_tab_background #181825
 tab_bar_background      #11111B
