tmux kill window bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,8 @@ bind-key C-c new-window -c "#{pane_current_path}"
 # Show sessions
 bind-key C-s choose-session
 bind-key C-w kill-window
+bind-key O kill-window -a
+bind-key & kill-window
 bind-key C-, copy-mode 
 bind-key C-r send-keys -t :.+ "r" Enter
 
