kitty layout and cursor updates

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,8 @@
 macos_option_as_alt yes
 confirm_os_window_close 0
 shell /opt/homebrew/bin/fish
-cursor_trail 3
-cursor_trail_decay 0.01 0.1
+# cursor_trail 3
+# cursor_trail_decay 0.01 0.1
 
 # Font
 font_family Fira Code Medium
@@ -72,7 +72,8 @@ map super+shift+, load_config_file
 map super+, move_tab_backward
 map super+shift+l goto_layout stack
 map super+o close_other_tabs_in_os_window
-map super+shift+o close_other_tabs_in_os_window
+# map super+shift+o close_other_tabs_in_os_window
+map super+shift+o goto_layout stack
 map super+shift+enter goto_layout stack
 # https://sw.kovidgoyal.net/kitty/overview/#detach-window
 map super+shift+t detach_window new-tab
