helix <space>n also writes the file

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -78,6 +78,7 @@ m.Q = "@l/\"|'<ret>v/<C-r>/<ret><A-minus>v"
 "minus" = ["yank_abs_filename_to_clipboard", ":sh kitty @ launch --type=overlay fish -c 'y (pbpaste)'"]
 '\' = ["yank_abs_filename_to_clipboard", ":sh kitty @ launch --location=hsplit fish -c 'yazi (pbpaste)'"]
 '|' = ["yank_abs_filename_to_clipboard", ":sh kitty @ launch --location=vsplit fish -c 'yazi (pbpaste)'"]
+# 'C-g' = ["yank_abs_filename_to_clipboard", ":sh kitty @ launch --type=tab fish -c 'lazygit (pbpaste)'"]
 
 # Space mode
 [keys.normal." "]
@@ -95,7 +96,7 @@ I = ["yank_abs_filename_to_clipboard", ":sh kitty @ launch --type=tab fish -c 'y
 "w" = ":w"
 # TODO: Kitty send command 'r' to other window
 # through use of sh kitty sending it
-"n" = ":sh kitty @ send-text -m id:$(kitty @ ls | jq -r '.[].tabs[].windows[] | select(.is_focused == false) | .id' | head -n 1) 'r\\x0d'"
+"n" = [":w", ":sh kitty @ send-text -m id:$(kitty @ ls | jq -r '.[].tabs[].windows[] | select(.is_focused == false) | .id' | head -n 1) 'r\\x0d'"]
 
 [keys.insert]
 "C-c" = "normal_mode"
