--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -83,6 +83,7 @@ map super+shift+d detach_window tab-right
 map super+shift+s detach_window ask
 
 background_opacity 0.8
+background_blur 40
 
 # Tab style
 # tab_bar_style separator
