yazi colour adjust

--- a/yazi/theme.toml
+++ b/yazi/theme.toml
@@ -111,3 +111,28 @@ prepend_conds = [
 	# { if = "!dir", text = "󰈔" },
 ]
 
+[filetype]
+
+rules = [
+    # Images
+    { mime = "image/*", fg = "#9ccfd8" },
+
+    # Videos
+    { mime = "video/*", fg = "#f6c177" },
+    { mime = "audio/*", fg = "#f6c177" },
+
+    # Archives
+    { mime = "application/zip", fg = "#eb6f92" },
+    { mime = "application/gzip", fg = "#eb6f92" },
+    { mime = "application/x-tar", fg = "#eb6f92" },
+    { mime = "application/x-bzip", fg = "#eb6f92" },
+    { mime = "application/x-bzip2", fg = "#eb6f92" },
+    { mime = "application/x-7z-compressed", fg = "#eb6f92" },
+    { mime = "application/x-rar", fg = "#eb6f92" },
+
+    # Fallback
+    { name = "*", fg = "#e0def4" },
+    # { name = "*/", fg = "#f09ea4" },
+    { name = "*/", fg = "#50aaff" },
+]
+
