--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,9 +68,11 @@ bind-key \\ split-window -v -c "#{pane_current_path}"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'egel/tmux-gruvbox'
+set -g @plugin 'dracula/tmux'
+# set -g @tmux-gruvbox 'dark' # or 'light', 'dark-transparent', 'light-transparent'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 # set -g @plugin 'alexwforsythe/tmux-which-key'
-set -g @plugin 'dracula/tmux'
 
 set -g @dracula-plugins "battery cpu-usage ram-usage git"
 
