--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -162,6 +162,11 @@ run  = "shell 'fish -c \"cd (git_repo_dir $1); nvim $@\"' --block --confirm"
 desc = "Open with nvim"
 
 [[manager.prepend_keymap]]
+on   = "<A-j>"
+run  = "shell 'fish -c \"cd (git_repo_dir $1); nvim_find_files\"' --block --confirm"
+desc = "Open with nvim"
+
+[[manager.prepend_keymap]]
 on   = "<C-e>"
 run  = "shell 'fish -c \"cd (git_repo_dir $1); emacsclient -c $@\"' --block --confirm"
 desc = "Open with emacs"
