better more reliable yazi launch from lazygit

--- a/lazygit/config.yaml
+++ b/lazygit/config.yaml
@@ -8,6 +8,6 @@ promptToReturnFromSubprocess: false
 
 customCommands:
   - key: "I"
-    command: "p=$(git -C $(dirname {{ if .SelectedFile }}{{.SelectedFile.Name}}{{ else }}{{ .SelectedPath }}{{end}}) rev-parse --show-toplevel)/{{ if .SelectedFile }}{{ .SelectedFile.Name }}{{ end }} && fish -C \"set p $p\" -c \"launch_new_tab 'yazi $p'\""
+    command: "p={{ .SelectedWorktree.Path }}/{{ if .SelectedFile }}{{ .SelectedFile.Name }}{{ end }} && fish -C \"set p $p\" -c \"launch_new_tab 'yazi $p'\""
     context: "global"
     description: "Yazi"
