--- a/lazygit/config.yaml
+++ b/lazygit/config.yaml
@@ -4,8 +4,7 @@ gui:
       # - yellow
       # - bold
 promptToReturnFromSubprocess: false
-
-
+notARepository: skip
 customCommands:
   - key: "I"
     command: "p={{ .SelectedWorktree.Path }}/{{ if .SelectedFile }}{{ .SelectedFile.Name }}{{ end }} && fish -C \"set p $p\" -c \"launch_new_tab 'yazi $p'\""
