--- a/lazygit/config.yaml
+++ b/lazygit/config.yaml
@@ -7,6 +7,22 @@ promptToReturnFromSubprocess: false
 notARepository: skip
 customCommands:
   - key: "I"
-    command: "p={{ .SelectedWorktree.Path }}/{{ if .SelectedFile }}{{ .SelectedFile.Name }}{{ end }} && fish -C \"set p $p\" -c \"launch_new_tab 'yazi $p'\""
+    command: "p={{ .SelectedWorktree.Path }}/{{ if .SelectedFile }}{{ .SelectedFile.Name }}{{ end }} && fish -C \"set p $p\" -c \"yazi_new_tab '$p'\""
+    context: "global"
+    description: "Yazi"
+  - key: "J"
+    command: "fish -c \"launch_new_tab 'cd {{ .SelectedWorktree.Path }}; {{ if .SelectedFile }}nvim {{ .SelectedFile.Name }}{{ else }}nvim_find_files $p{{ end }}'\""
+    context: "global"
+    description: "Yazi"
+  - key: "<c-j>"
+    command: "fish -c \"launch_new_tab 'cd {{ .SelectedWorktree.Path }}; {{ if .SelectedFile }}nvim {{ .SelectedFile.Name }}{{ else }}nvim_find_files $p{{ end }}'\""
+    context: "global"
+    description: "Yazi"
+  - key: "K"
+    command: "p={{ .SelectedWorktree.Path }}/{{ if .SelectedFile }}{{ .SelectedFile.Name }}{{ end }} && fish -C \"set p $p\" -c \"hx_new_tab '$p'\""
+    context: "global"
+    description: "Yazi"
+  - key: "<c-k>"
+    command: "p={{ .SelectedWorktree.Path }}/{{ if .SelectedFile }}{{ .SelectedFile.Name }}{{ end }} && fish -C \"set p $p\" -c \"hx_new_tab '$p'\""
     context: "global"
     description: "Yazi"
